# src/api/traffic-light/TrafficLightDto.ts
@@ -5,6 +5,7 @@ import { TrafficLight } from '../../domain/traffic-light/TrafficLight';
 export interface TrafficLightDto {
   id: number;
   name: string;
+  alias: string;
   coordinates: string;
   lastStatus: string;
 }
@@ -14,6 +15,7 @@ export class TrafficLightMap extends Mapper<TrafficLight> {
     return TrafficLight.build({
       id: raw.id,
       name: raw.name,
+      alias: raw.alias,
       coordinates: raw.coordinates,
       lastStatus: raw.lastStatus
     })
@@ -23,6 +25,7 @@ export class TrafficLightMap extends Mapper<TrafficLight> {
     return {
       id: t.getId(),
       name: t.getName(),
+      alias: t.getAlias(),
       coordinates: t.getCoordinates(),
       lastStatus: t.getLastStatus()
     };
